<resources>
    <string name="app_name">RolarDados</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
    <string name="rolar">Lançar Dados</string>
    <string name="titulo_dados">Numero de dados</string>
    <string name="resultado">Resultado tirado: </string>
</resources>